# tscc

./: .gitignore  AGENTS.md  CLASS_GENERICS_ANALYSIS.md  Cargo.toml  README.md  ROADMAP.md  TYPE_PREDICATE_VISUAL_MAP.txt  benchmark  build.rs  date  hello  stdlib  test
examples/: benchmark.rs  benchmark.ts  hello.ts  imports.ts  math.ts  math_utils.ts  stdlib.ts  task-manager.ts  test.rs  test.ts
runtime/: runtime.c
src/: diagnostics.rs  lib.rs  main.rs  modules.rs
src/codegen/: llvm.rs
src/lexer/: scanner.rs  token.rs
src/parser/: ast.rs  parser.rs
src/types/: checker.rs  mod.rs  ty.rs
tests/: integration.rs
