[package]
name = "tscc"
version = "0.1.0"
edition = "2021"
description = "A compiler that compiles TypeScript to native machine code"

[dependencies]
inkwell = { version = "0.5", features = ["llvm18-0"] }
clap = { version = "4", features = ["derive"] }

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
